vista: update cfg for nvc

--- a/vista/nvc-nvcc/vista.cfg
+++ b/vista/nvc-nvcc/vista.cfg
@@ -7,25 +7,25 @@ CPP  = cpp
 FPP  = cpp
 CC   = nvc
 CXX  = nvc++
-F90  = gfortran
+F90  = nvfortran
+CUCC = nvcc
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvc++
+LD = nvc++ -g -cuda
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -I${TACC_NVIDIA_INC} -std=c99
-CXXFLAGS  = -I${TACC_NVIDIA_INC}
-F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
-
-LDFLAGS = -L${TACC_NVIDIA_LIB}
+CFLAGS    = -I${TACC_NVIDIA_INC} -D_GNU_SOURCE
+CXXFLAGS  = -I${TACC_NVIDIA_INC} -std=c++17 -D_GNU_SOURCE
+F90FLAGS  = -Mcray=pointer
+CUCCFLAGS = -ccbin nvc++ -g --compiler-options -march=native -std=c++17 --compiler-options -std=c++17 --expt-relaxed-constexpr --extended-lambda --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this -x cu -Drestrict=__restrict__ -D__cpp_lib_filesystem
 
 SYS_INC_DIRS = ${TACC_NVIDIA_MATH_INC} ${TACC_GSL_DIR}/include
 LIBDIRS      = ${TACC_NVIDIA_MATH_LIB} ${TACC_GSL_DIR}/lib
-LIBS         = gfortran nvToolsExt curand hdf5
+LIBS         = nvf nvToolsExt curand hdf5
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -37,14 +37,16 @@ CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 FPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 C_DEBUG_FLAGS    = -g -ftrapv -fstack-protector-all -fbounds-check
 CXX_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fbounds-check
+CUCC_DEBUG_FLAGS =
 F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointer,recursion -finit-character=65 -finit-integer=42424242 -finit-real=nan
 
 OPTIMISE            = yes
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS    = -O3
-CXX_OPTIMISE_FLAGS  = -O3
-F90_OPTIMISE_FLAGS  = -O3
+C_OPTIMISE_FLAGS    = -Mvect=simd -fast
+CXX_OPTIMISE_FLAGS  = -Mvect=simd -fast
+CUCC_OPTIMISE_FLAGS =
+F90_OPTIMISE_FLAGS  = -Mvect=simd -fast
 
 PROFILE           = no
 CPP_PROFILE_FLAGS =
@@ -53,22 +55,28 @@ C_PROFILE_FLAGS   = -pg
 CXX_PROFILE_FLAGS = -pg
 F90_PROFILE_FLAGS = -pg
 
-OPENMP = no
+OPENMP           = yes
+CPP_OPENMP_FLAGS = -fopenmp
+FPP_OPENMP_FLAGS = -fopenmp
+C_OPENMP_FLAGS   = -fopenmp
+CXX_OPENMP_FLAGS = -fopenmp
+F90_OPENMP_FLAGS = -fopenmp
 
 WARN            = no
 CPP_WARN_FLAGS  = -Wall
 FPP_WARN_FLAGS  = -Wall
 C_WARN_FLAGS    = -Wall
 CXX_WARN_FLAGS  = -Wall
+CUCC_WARN_FLAGS = -Xcompiler -Wall
 F90_WARN_FLAGS  = -Wall
 
 # CUDA does not support these
-DISABLE_INT16 = yes
+DISABLE_INT16  = yes
 DISABLE_REAL16 = yes
 
 # More Options
 
-AMREX_DIR = ${WORK}/local/amrex-lib
+AMREX_DIR = ${ETKPATH}/amrex-lib-nvc-nvcc
 AMREX_ENABLE_CUDA = yes
 
 MPI_DIR      = ${TACC_MPI_DIR}
@@ -76,10 +84,19 @@ MPI_INC_DIRS = ${TACC_MPI_DIR}/include
 MPI_LIB_DIRS = ${TACC_MPI_DIR}/lib
 MPI_LIBS     = mpi
 
-BLAS_DIR     =
-BLAS_LIBS    =
-LAPACK_DIR   =
-LAPACK_LIBS  =
+HWLOC_DIR      = ${TACC_MPI_DIR}
+HWLOC_INC_DIRS = ${TACC_MPI_DIR}/include
+HWLOC_LIB_DIRS = ${TACC_MPI_DIR}/lib
+
+BLAS_DIR        = ${TACC_NVPL_DIR}
+BLAS_INC_DIRS   = ${TACC_NVPL_DIR}/include
+BLAS_LIB_DIRS   = ${TACC_NVPL_DIR}/lib
+BLAS_LIBS       = nvpl_blas_lp64_gomp
+
+LAPACK_DIR      = ${TACC_NVPL_DIR}
+LAPACK_INC_DIRS = ${TACC_NVPL_DIR}/include
+LAPACK_LIB_DIRS = ${TACC_NVPL_DIR}/lib
+LAPACK_LIBS     = nvpl_lapack_lp64_gomp
 
 ADIOS2_DIR = ${TACC_ADIOS2_DIR}
 ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
@@ -88,16 +105,16 @@ ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 BOOST_DIR = ${TACC_BOOST_DIR}
 FFTW3_DIR = ${TACC_FFTW3_DIR}
-
 GSL_DIR = ${TACC_GSL_DIR}
 
 HDF5_DIR = ${TACC_HDF5_DIR}
 HDF5_INC_DIRS = ${TACC_HDF5_INC}
 HDF5_LIB_DIRS = ${TACC_HDF5_LIB}
 
-SILO_DIR = ${TACC_SILO_DIR}
-SILO_INC_DIRS = ${TACC_SILO_INC}
-SILO_LIB_DIRS = ${TACC_SILO_LIB}
+# require hdf5 which is conflict with adios2 which require phdf5
+#SILO_DIR = ${TACC_SILO_DIR}
+#SILO_INC_DIRS = ${TACC_SILO_INC}
+#SILO_LIB_DIRS = ${TACC_SILO_LIB}
 
 ZLIB_DIR = ${TACC_ZLIB_DIR}
 
