vista: update nvc-nvcc/vista.cfg

--- a/vista/nvc-nvcc/vista.cfg
+++ b/vista/nvc-nvcc/vista.cfg
@@ -18,10 +18,12 @@ CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -I${TACC_NVIDIA_INC} -D_GNU_SOURCE
-CXXFLAGS  = -I${TACC_NVIDIA_INC} -std=c++17 -D_GNU_SOURCE
+CFLAGS    = -D_GNU_SOURCE
+CXXFLAGS  = -std=c++17 -D_GNU_SOURCE
 F90FLAGS  = -Mcray=pointer
 CUCCFLAGS = -ccbin nvc++ -g --compiler-options -march=native -std=c++17 --compiler-options -std=c++17 --expt-relaxed-constexpr --extended-lambda --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this -x cu -Drestrict=__restrict__ -D__cpp_lib_filesystem
+
+LDFLAGS = -L${TACC_CUDA_LIB} -L${TACC_NVPL_LIB}
 
 SYS_INC_DIRS = ${TACC_NVIDIA_MATH_INC} ${TACC_GSL_DIR}/include
 LIBDIRS      = ${TACC_NVIDIA_MATH_LIB} ${TACC_GSL_DIR}/lib
@@ -37,7 +39,6 @@ CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 FPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 C_DEBUG_FLAGS    = -g -ftrapv -fstack-protector-all -fbounds-check
 CXX_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fbounds-check
-CUCC_DEBUG_FLAGS =
 F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointer,recursion -finit-character=65 -finit-integer=42424242 -finit-real=nan
 
 OPTIMISE            = yes
@@ -45,7 +46,6 @@ CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 C_OPTIMISE_FLAGS    = -Mvect=simd -fast
 CXX_OPTIMISE_FLAGS  = -Mvect=simd -fast
-CUCC_OPTIMISE_FLAGS =
 F90_OPTIMISE_FLAGS  = -Mvect=simd -fast
 
 PROFILE           = no
@@ -55,7 +55,7 @@ C_PROFILE_FLAGS   = -pg
 CXX_PROFILE_FLAGS = -pg
 F90_PROFILE_FLAGS = -pg
 
-OPENMP           = yes
+OPENMP           = no
 CPP_OPENMP_FLAGS = -fopenmp
 FPP_OPENMP_FLAGS = -fopenmp
 C_OPENMP_FLAGS   = -fopenmp
@@ -67,7 +67,6 @@ CPP_WARN_FLAGS  = -Wall
 FPP_WARN_FLAGS  = -Wall
 C_WARN_FLAGS    = -Wall
 CXX_WARN_FLAGS  = -Wall
-CUCC_WARN_FLAGS = -Xcompiler -Wall
 F90_WARN_FLAGS  = -Wall
 
 # CUDA does not support these
