vista: rename files

--- a/vista/gcc-nvcc/vista.cfg
+++ b/vista/gcc-nvcc/vista.cfg
@@ -32,7 +32,7 @@ LIBS         = gfortran nvToolsExt curand hdf5
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
-VECTORISE = no
+VECTORISE = no  # carpet vectorise thorn
 
 DEBUG            = no
 CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
@@ -65,12 +65,12 @@ CXX_WARN_FLAGS  = -Wall
 F90_WARN_FLAGS  = -Wall
 
 # CUDA does not support these
-DISABLE_INT16 = yes
+DISABLE_INT16  = yes
 DISABLE_REAL16 = yes
 
 # More Options
 
-AMREX_DIR = ${ETKPATH}/amrex-lib
+AMREX_DIR = ${ETKPATH}/amrex-lib-gcc-nvcc
 AMREX_ENABLE_CUDA = yes
 
 MPI_DIR      = ${TACC_MPI_DIR}
@@ -92,6 +92,7 @@ LAPACK_INC_DIRS = ${TACC_NVPL_DIR}/include
 LAPACK_LIB_DIRS = ${TACC_NVPL_DIR}/lib
 LAPACK_LIBS     = nvpl_lapack_lp64_gomp
 
+# system adios2 not consist with gcc-13
 #ADIOS2_DIR = ${TACC_ADIOS2_DIR}
 #ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
 #ADIOS2_LIB_DIRS = ${TACC_ADIOS2_LIB}
