--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -30,7 +30,7 @@ LIBS         = gfortran hdf5
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
-VECTORISE = no
+VECTORISE = no  # carpet vectorise thorn
 
 DEBUG            = no
 CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
@@ -55,7 +55,7 @@ F90_PROFILE_FLAGS = -pg
 
 OPENMP           = yes
 CPP_OPENMP_FLAGS = -fopenmp
-FPP_OPENMP_FLAGS = -D_OPENMP
+FPP_OPENMP_FLAGS = -fopenmp
 C_OPENMP_FLAGS   = -fopenmp
 CXX_OPENMP_FLAGS = -fopenmp
 F90_OPENMP_FLAGS = -fopenmp
@@ -69,7 +69,7 @@ F90_WARN_FLAGS  = -Wall
 
 # More Options
 
-AMREX_DIR = ${ETKPATH}/amrex-lib-gg
+AMREX_DIR = ${ETKPATH}/amrex-lib-gcc
 
 MPI_DIR      = ${TACC_MPI_DIR}
 MPI_INC_DIRS = ${TACC_MPI_DIR}/include
@@ -103,6 +103,11 @@ HDF5_DIR = ${TACC_HDF5_DIR}
 HDF5_INC_DIRS = ${TACC_HDF5_INC}
 HDF5_LIB_DIRS = ${TACC_HDF5_LIB}
 
+# require hdf5 which is conflict with adios2 which require phdf5
+#SILO_DIR = ${TACC_SILO_DIR}
+#SILO_INC_DIRS = ${TACC_SILO_INC}
+#SILO_LIB_DIRS = ${TACC_SILO_LIB}
+
 ZLIB_DIR = ${TACC_ZLIB_DIR}
 
 YAML_CPP_DIR = BUILD
@@ -113,4 +118,3 @@ YAML_CPP_DIR = BUILD
 #OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
 #PTHREADS_DIR = NO_BUILD
 #SSHT_DIR     = BUILD
-#SILO_DIR     = BUILD
