vista: update vista.cfg for nvc

--- a/vista/nvc/vista.cfg
+++ b/vista/nvc/vista.cfg
@@ -11,17 +11,17 @@ F90  = nvfortran
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvc++
+#LD = nvc++
 
 #CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -I${TACC_NVIDIA_INC} -D_GNU_SOURCE
-CXXFLAGS  = -I${TACC_NVIDIA_INC} -std=c++17 -D_GNU_SOURCE
-F90FLAGS  = -Mcray=pointer
+CFLAGS    = -tp neoverse-v2 -D_GNU_SOURCE
+CXXFLAGS  = -tp neoverse-v2 -std=c++17 -D_GNU_SOURCE
+F90FLAGS  = -tp neoverse-v2 -Mcray=pointer
 
-LDFLAGS = -L${TACC_NVIDIA_LIB}
+LDFLAGS = -L${TACC_NVPL_LIB}
 
 SYS_INC_DIRS = ${TACC_GSL_DIR}/include
 LIBDIRS      = ${TACC_GSL_DIR}/lib
@@ -66,10 +66,6 @@ FPP_WARN_FLAGS  = -Wall
 C_WARN_FLAGS    = -Wall
 CXX_WARN_FLAGS  = -Wall
 F90_WARN_FLAGS  = -Wall
-
-# CUDA does not support these
-DISABLE_INT16  = yes
-DISABLE_REAL16 = yes
 
 # More Options
 
