--- a/vista/nvc/vista.cfg
+++ b/vista/nvc/vista.cfg
@@ -54,11 +54,11 @@ CXX_PROFILE_FLAGS = -pg
 F90_PROFILE_FLAGS = -pg
 
 OPENMP           = yes
-CPP_OPENMP_FLAGS = -fopenmp
-FPP_OPENMP_FLAGS = -fopenmp
-C_OPENMP_FLAGS   = -fopenmp
-CXX_OPENMP_FLAGS = -fopenmp
-F90_OPENMP_FLAGS = -fopenmp
+CPP_OPENMP_FLAGS = -D_OPENMP
+FPP_OPENMP_FLAGS = -D_OPENMP
+C_OPENMP_FLAGS   = -mp
+CXX_OPENMP_FLAGS = -mp
+F90_OPENMP_FLAGS = -mp
 
 WARN            = no
 CPP_WARN_FLAGS  = -Wall
