vista: turn off NSIMD

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -13,7 +13,7 @@ F90  = gfortran
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
 #LD = nvcc --compiler-bindir g++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
 
-#CPPFLAGS = -DSIMD_CPU
+CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
