vista: remove vectorization options for nvc compilers

--- a/vista/nvc-nvcc/vista.cfg
+++ b/vista/nvc-nvcc/vista.cfg
@@ -18,9 +18,9 @@ CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -D_GNU_SOURCE
-CXXFLAGS  = -std=c++17 -D_GNU_SOURCE
-F90FLAGS  = -Mcray=pointer
+CFLAGS    = -tp=neoverse-v2 -D_GNU_SOURCE
+CXXFLAGS  = -tp=neoverse-v2 -std=c++17 -D_GNU_SOURCE
+F90FLAGS  = -tp=neoverse-v2 -Mcray=pointer
 CUCCFLAGS = -ccbin nvc++ -g --compiler-options -march=native -std=c++17 --compiler-options -std=c++17 --expt-relaxed-constexpr --extended-lambda --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this -x cu -Drestrict=__restrict__ -D__cpp_lib_filesystem
 
 LDFLAGS = -L${TACC_CUDA_LIB} -L${TACC_NVPL_LIB}
@@ -44,9 +44,9 @@ F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointe
 OPTIMISE            = yes
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS    = -Mvect=simd -fast
-CXX_OPTIMISE_FLAGS  = -Mvect=simd -fast
-F90_OPTIMISE_FLAGS  = -Mvect=simd -fast
+C_OPTIMISE_FLAGS    = -O3 # -Mvect=simd -fast
+CXX_OPTIMISE_FLAGS  = -O3 # -Mvect=simd -fast
+F90_OPTIMISE_FLAGS  = -O3 # -Mvect=simd -fast
 
 PROFILE           = no
 CPP_PROFILE_FLAGS =
