--- a/vista/nvc/vista.cfg
+++ b/vista/nvc/vista.cfg
@@ -17,9 +17,9 @@ F90  = nvfortran
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -tp neoverse-v2 -D_GNU_SOURCE
-CXXFLAGS  = -tp neoverse-v2 -std=c++17 -D_GNU_SOURCE
-F90FLAGS  = -tp neoverse-v2 -Mcray=pointer
+CFLAGS    = -tp=neoverse-v2 -D_GNU_SOURCE
+CXXFLAGS  = -tp=neoverse-v2 -std=c++17 -D_GNU_SOURCE
+F90FLAGS  = -tp=neoverse-v2 -Mcray=pointer
 
 LDFLAGS = -L${TACC_NVPL_LIB}
 
@@ -42,9 +42,9 @@ F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointe
 OPTIMISE            = yes
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS    = -Mvect=simd -fast
-CXX_OPTIMISE_FLAGS  = -Mvect=simd -fast
-F90_OPTIMISE_FLAGS  = -Mvect=simd -fast
+C_OPTIMISE_FLAGS    = -O3 # -Mvect=simd -fast
+CXX_OPTIMISE_FLAGS  = -O3 # -Mvect=simd -fast
+F90_OPTIMISE_FLAGS  = -O3 # -Mvect=simd -fast
 
 PROFILE           = no
 CPP_PROFILE_FLAGS =
