frontera: update path for AMReX

--- a/frontera/oneapi/frontera.cfg
+++ b/frontera/oneapi/frontera.cfg
@@ -70,7 +70,7 @@ CXX_WARN_FLAGS =
 F90_WARN_FLAGS =
 
 
-AMREX_DIR = ${ETKPATH}/amrex-lib
+AMREX_DIR = ${ETKPATH}/amrex-lib-oneapi
 
 BLAS_DIR  = ${MKLROOT}/lib/intel64
 BLAS_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
