--- a/frontier/cray/frontier.cfg
+++ b/frontier/cray/frontier.cfg
@@ -70,7 +70,7 @@ ADIOS2_INC_DIRS = ${OLCF_ADIOS2_ROOT}/include
 ADIOS2_LIB_DIRS = ${OLCF_ADIOS2_ROOT}/lib64
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
-AMREX_DIR = ${ETKPATH}/amrex-lib
+AMREX_DIR = ${ETKPATH}/amrex-cray
 
 LAPACK_DIR   = ${CRAY_LIBSCI_PREFIX_DIR}
 LAPACK_LIBS  =
