frontier: update file for amd and cray

--- a/frontier/amd-18.0.1/frontier.cfg
+++ b/frontier/amd-18.0.1/frontier.cfg
@@ -66,7 +66,7 @@ BLAS_DIR     = ${CRAY_LIBSCI_PREFIX_DIR}
 BLAS_LIBS    =
 MPI_DIR      = ${CRAY_MPICH_DIR}
 MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
-MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib /opt/cray/xpmem/2.8.4-1.0_7.3__ga37cbd9.shasta/lib64
+MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib
 MPI_LIBS     = mpi mpi_gtl_hsa xpmem
 
 FFTW3_DIR = ${FFTW_ROOT}
