vista: update gcc-nvcc

--- a/vista/gcc-nvcc/vista.cfg
+++ b/vista/gcc-nvcc/vista.cfg
@@ -116,4 +116,4 @@ YAML_CPP_DIR = BUILD
 #OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
 #PTHREADS_DIR = NO_BUILD
 #SSHT_DIR     = BUILD
-#SILO_DIR     = BUILD
+SILO_DIR     = ${TACC_SILO_DIR}
