--- a/vista/gcc-nvcc/vista.cfg
+++ b/vista/gcc-nvcc/vista.cfg
@@ -70,7 +70,7 @@ DISABLE_REAL16 = yes
 
 # More Options
 
-AMREX_DIR = ${ETKPATH}/amrex-lib-gcc-nvcc-test
+AMREX_DIR = ${ETKPATH}/amrex-lib-gcc-nvcc
 AMREX_ENABLE_CUDA = yes
 
 MPI_DIR      = ${TACC_MPI_DIR}
