Add linker for safety

--- a/vista/gcc-phdf5/vista.cfg
+++ b/vista/gcc-phdf5/vista.cfg
@@ -8,6 +8,7 @@ FPP  = cpp
 CC   = mpicc
 CXX  = mpicxx
 F90  = mpifort
+LD = mpicxx
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
