gp_slurm: add files

--- a/gp-slurm/gcc/gp.cfg
+++ b/gp-slurm/gcc/gp.cfg
@@ -57,27 +57,30 @@ F90_WARN_FLAGS = -Wall
 
 NSIMD_OPTIONS =  #AVX2 FMA
 
-GSL_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-FFTW3_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-HWLOC_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
+GSL_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+FFTW3_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+HWLOC_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
 
-OPENBLAS_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
+OPENBLAS_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
 
 PTHREADS_DIR = NO_BUILD
 
-BOOST_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-HDF5_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
+BOOST_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+HDF5_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
 HDF5_LIBS = hdf5_hl hdf5 hdf5_hl_cpp hdf5_cpp hdf5_hl_fortran hdf5_fortran
-ADIOS2_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-ADIOS2_LIB_DIRS = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/lib64
+ADIOS2_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+ADIOS2_LIB_DIRS = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/lib64
 ADIOS2_LIBS = adios2_cxx11 adios2_cxx11_mpi
-AMREX_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-NSIMD_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
+AMREX_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+NSIMD_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
 NSIMD_ARCH = AVX512_SKYLAKE
 NSIMD_LIBS= nsimd_AVX512_SKYLAKE
-OPENPMD_API_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-OPENPMD_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-SSHT_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-SILO_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-YAML_CPP_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
-ZLIB_DIR = /home/spack/newspack/var/spack/environments/etk_gcc_13/.spack-env/view/
+OPENPMD_API_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+OPENPMD_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+#SSHT_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+SILO_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+SILO_INC_DIRS = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/include
+SILO_LIB_DIRS = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/lib
+SILO_LIBS = silo
+YAML_CPP_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
+#ZLIB_DIR = /home/spack/rocky8/var/spack/environments/gcc12/.spack-env/view/
